5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4376/executions/1649_2442.log
== TEST (2019-04-15 19:14:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:24:34) 
-- CODE:
x=int(input("digite um numero:  "))
if(x%2)
   print("par")
else:
	print("impar")
-- ERROR:
File "XXXX", line 2
    if(x%2)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:24:42) 
-- CODE:
x=int(input("digite um numero:  "))
if(x%2)
   print("par")
else:
	print("impar")
-- ERROR:
File "XXXX", line 2
    if(x%2)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:24:42) 
-- CODE:
x=int(input("digite um numero:  "))
if(x%2)
   print("par")
else:
	print("impar")
-- ERROR:
File "XXXX", line 2
    if(x%2)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:24:50) 
-- CODE:
x=int(input("digite um numero:  "))
if(x%2==0)
   print("par")
else:
	print("impar")
-- ERROR:
File "XXXX", line 2
    if(x%2==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:24:59) 
-- CODE:
x=int(input("digite um numero:  "))
if(x%2==0):
   print("par")
else:
	print("impar")
-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:25:08) 
-- CODE:
x=int(input("digite um numero:  "))
if(x%2==0):
   print("par")
else:
	print("impar")
-- EXECUTION TIME:
0.191964
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
